--- a/.github/workflows/v_file.yml
+++ b/.github/workflows/v_file.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           git config --global user.email "github-actions@example.com"
           git config --global user.name "GitHub Actions"
-          git add v.txt last_updated.txt
+          git add .devcontainer/docs/v.txt last_updated.txt
           git commit -m "Update Baidu content"
           git push
 
