--- a/.github/workflows/v_file.yml
+++ b/.github/workflows/v_file.yml
@@ -2,7 +2,7 @@ name: Update Baidu Content
 
 on:
   schedule:
-    - cron: '0 */6 * * *' # 每天 UTC 00:00 执行
+    - cron: '0 */6 * * *'
   workflow_dispatch:
 
 jobs:
