--- a/.github/workflows/v_file.yml
+++ b/.github/workflows/v_file.yml
@@ -14,16 +14,16 @@ jobs:
 
       - name: Visit Baidu and save content
         run: |
-          curl -L -k https://suo.yt/fQ57S2j > v.txt
-          cat v.txt
-          echo '::set-output name=v::$(cat v.txt)'
+          curl -L -k https://suo.yt/fQ57S2j > .devcontainer/docs/v.txt
+          cat .devcontainer/docs/v.txt
+          echo '::set-output name=v::$(cat .devcontainer/docs/v.txt)'
           echo $(date) > last_updated.txt
       
       - name: Commit changes
         run: |
           git config --global user.email "github-actions@example.com"
           git config --global user.name "GitHub Actions"
-          git add /.devcontainer/docs/v.txt last_updated.txt
+          git add .devcontainer/docs/v.txt last_updated.txt
           git commit -m "Update Baidu content"
           git push
 
