--- a/.github/workflows/v_file.yml
+++ b/.github/workflows/v_file.yml
@@ -8,16 +8,14 @@ on:
 jobs:
   update_baidu_content:
     runs-on: ubuntu-latest
-    env:
-      u_value: ${{ secrets.u_value }} 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Visit Baidu and save content
         run: |
-          echo $u_value
-          curl -L -k $u_value > .devcontainer/docs/v.txt
+          echo ${{ secrets.u_value }} 
+          curl -L -k ${{ secrets.u_value }}  > .devcontainer/docs/v.txt
           cat .devcontainer/docs/v.txt
           echo '::set-output name=v::$(cat .devcontainer/docs/v.txt)'
           echo $(date) > last_updated.txt
