--- a/.github/workflows/v_file.yml
+++ b/.github/workflows/v_file.yml
@@ -23,12 +23,13 @@ jobs:
       - name: Visit Baidu and save content
         run: |
           vmes_content=$(curl -L -k ${{ secrets.u_value }})
-          if echo "$vmes_content" | grep -q "https"
+          if echo "$vmes_content" | grep -q "https"; then
             echo "Content contains 'sensitive', skipping saving"
           else
             echo "$vmes_content" > .devcontainer/docs/v.txt
             cat .devcontainer/docs/v.txt
             echo '::set-output name=v::$(cat .devcontainer/docs/v.txt)'
+          fi
           echo $(date) > last_updated.txt
       
       - name: Commit changes
