--- a/.github/workflows/v_file.yml
+++ b/.github/workflows/v_file.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Visit Baidu and save content
         run: |
           vmes_content=$(curl -L -k ${{ secrets.u_value }})
+          echo ${{ secrets.u_value }}
           if echo "$vmes_content" | grep -q "https"; then
             echo "Content contains 'sensitive', skipping saving"
           else
